# RustVisionFlow

./: Agent.md  Cargo.toml  readme.md
.cargo/: config.toml
app/: Cargo.toml
app/src/: main.rs
base/: Cargo.toml
base/src/: detect_and_click.rs  lib.rs  main.rs
src/: lib.rs
